--- a/style.css
+++ b/style.css
@@ -1,11 +1,39 @@
-#app {
-  display: flex;
-  flex-direction: row;
-  /* gap: 20px; */
-  /* margin-top: 140px; */
-  margin: 10px 0px;
-}
-
 body {
   background-color: #111;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+#app {
+  width: 320px;
+  height: 200px;
+  border: 1px solid #e8e8e8;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  background-color: bisque;
+}
+
+.time {
+  align-self: flex-end;
+  background: rgb(60, 60, 212);
+  height: 20px;
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid aqua;
+  padding: 2px 10px;
+}
+
+.time p {
+  color: white;
+}
+
+.img h1 {
+  color: #d90428;
+  -webkit-text-stroke: 1px white;
+  font-size: 40px;
 }
